# WebAI-to-API

./: config.conf.example  pyproject.toml
src/: run.py
src/app/: config.py
src/app/endpoints/: chat.py  gemini.py  google_generative.py
src/models/: gemini.py
