# File: pyproject.toml

[tool.poetry]
name = "webai-to-api"
version = "0.4.0"
description = "WebAI-to-API is a modular web server built with FastAPI, designed to manage requests across AI services."
authors = ["Mohammad <m.khani2810@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "app", from = "src" },
    { include = "models", from = "src" },
    { include = "schemas", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.135.0,<0.140.0"
browser-cookie3 = ">=0.20.1,<0.21.0"
httpx = ">=0.28.1,<0.29.0"
curl-cffi = ">=0.7.4,<0.15.0"
gemini-webapi = ">=1.21.0,<2.0.0"
uvicorn = {extras = ["standard"], version = ">=0.42.0,<0.50.0"}

# Windows-specific dependencies for cookie decryption
# These will only be installed on Windows systems
pywin32 = { version = "==308", platform = "win32" }
pycryptodomex = { version = ">=3.21.0,<4.0.0", platform = "win32" }
tomli = "^2.4.1"
g4f = "^7.3.4"
python-multipart = "^0.0.22"
aiohttp-socks = "^0.11.0"
nodriver = "^0.48.1"
platformdirs = "^4.9.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"